# filterviz

./: CMakeLists.txt  README.md  build_linux.sh  build_macos.sh  build_windows.sh
example/: CMakeLists.txt  main.cpp
include/: filterviz.h  filterviz_global.h  filterwidget.h
src/: filterviz.cpp  filterwidget.cpp  filterwidget.qrc  filterwidget.ui
